--- a/src/app.html
+++ b/src/app.html
@@ -117,9 +117,9 @@
       <div class="d-flex justify-content-between align-items-center">
         <h4 class="text-white mt-4 footer-fs">Johnathan Specter</h4>
         <div class="mt-4 d-flex justify-content-around w-9 align-items-center">
-          <img src="../Assets/Social Icons/Twitter.svg">
-          <img src="../Assets/Social Icons/LinkedIn.svg">
-          <img src="../Assets/Social Icons/Github.svg">
+          <a href="#"><img src="../Assets/Social Icons/Twitter.svg"></a>
+          <a href="#"><img src="../Assets/Social Icons/LinkedIn.svg"></a>
+          <a href="#"><img src="../Assets/Social Icons/Github.svg"></a>
         </div>
       </div>
     </div>
