--- a/src/app.html
+++ b/src/app.html
@@ -10,13 +10,14 @@
 <body>
   <section class="min-height bg-dark">
     <header class="container pt-4 mb-5">
-      <nav class="row navbar navbar-expand-lg justify-content-between">
+      <nav class="row navbar navbar-expand-lg justify-content-between ">
+        <button class="navbar-toggler custom-none d-lg-none d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <h3 class="m-0 footer-fs text-white">Johnathan Specter</h3>
+          <i class="bi bi-list"></i>
+        </button>          
         <div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>          
           <div class="collapse navbar-collapse" id="navbarScroll">
-            <a class="navbar-brand text-white" href="#">Johnathan Specter</a>
+            <a class="navbar-brand text-white d-lg-block d-none" href="#">Johnathan Specter</a>
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll mx-auto" style="--bs-scroll-height: 100px;">
               <li class="nav-item">
                 <a class="nav-link text-white-50 font active" aria-current="page" href="#">Articles</a>
@@ -31,7 +32,7 @@
                 <a class="nav-link text-white-50 font active" aria-current="page" href="#">About</a>
               </li>
             </ul>
-            <button type="button" class="btn btn-secondary">Get in touch</button>
+            <button type="button" class="btn btn-secondary d-lg-block d-none">Get in touch</button>
           </div>    
         </div>
       </nav>
@@ -42,7 +43,7 @@
         <p class="w-45 text-white-50">Award-winning web developer and author, with over 15+ years of working experience with Fortune 500 companies like Apple, Google, Facebook and more.</p>
       </div>
     </div>
-    <div class="container my-5">
+    <div class="container my-5 d-none d-lg-block">
       <div class="d-flex justify-content-between align-items-center">
         <div>
           <img src="../Assets/Logos/Walmart.svg">
@@ -64,15 +65,44 @@
         </div>
       </div>
     </div>
+    <div class="container my-5 d-lg-none d-sm-block">
+      <div class="d-flex justify-content-center align-items-center pb-4">
+        <div>
+          <img src="../Assets/Logos/Walmart.svg">
+        </div>
+        <div class="px-4"></div> 
+        <div>
+          <img src="../Assets/Logos/JP Morgan.svg">
+        </div>
+      </div>
+      <div class="d-flex justify-content-around align-items-center">
+        <div>
+          <img src="../Assets/Logos/Visa.svg">
+        </div>
+        <div>
+          <img src="../Assets/Logos/Tinder.svg">
+        </div>
+        <div>
+          <img src="../Assets/Logos/Samsung.svg">
+        </div>
+        <div>
+          <img src="../Assets/Logos/Verizon.svg">
+        </div>
+      </div>
+    </div>
     <div class="container my-5">
-      <div class="d-flex justify-content-between align-items-center">
+      <div class="d-lg-flex d-sm-block justify-content-between align-items-center">
         <div class="h-50">
-          <img src="../Assets/Spense.png" class="img-size d-block" alt="spense-photo">
+          <div>
+            <img src="../Assets/Spense.png" class="img-size d-block" alt="spense-photo">
+          </div>
           <a href="#" class="a-style h4">Spense.com <span><i class="bi bi-arrow-right fs-5"></i></span></a>
           <p class="text-white-50 text-size">Rethinking the way writes get paid, an open-source platform designed to help writers focus more on writing, and less on when and how they'll get paid. Project in colleboration with Codewell.cc</p>
         </div>
         <div>
-          <img src="../Assets/YelpCamp.png" class="img-size d-block" alt="yelpcamp-photo">
+          <div>
+            <img src="../Assets/YelpCamp.png" class="img-size d-block" alt="yelpcamp-photo">
+          </div>
           <a href="" class="a-style h4">YelpCamp <span><i class="bi bi-arrow-right fs-5"></i></span></a>
           <p class="text-white-50">Allowing backpack travelers to perfectly plan their trip without an open-source platform similar to TripAdvisor.With over 1m MAU, YelpCamp has been the crowd's favourite in 2021.</p>
         </div>
@@ -84,13 +114,13 @@
     <div class="container mb-5">
       <div class="row">
         <div class="mt-5"></div>
-        <div class="col-6 mt-5">
+        <div class="col-lg-6 col-sm-12 mt-5">
           <h3 class="text-white">A co-founder at one of the world's largest communities.</h3>
           <p class="text-white-50">The combined experience I have working at the top Fortune 500 companies has allowed me to developer a skillest that helps me in not just development, but in every aspect of any business.</p>
           <p class="text-white-50">I'm proud to announce that I am now working at one of the largest communitites eaching young minds about how to sell yourself as a developer and open them to a whole new world of opportunities.</p>
         </div>
-        <div class="col-6 p-left mt-5">
-          <p class="text-white-50 text-size">As a developer, you have everything available to you and all tha's holding you back is yourself.</p>
+        <div class="col-lg-6 col-sm-12 p-left mt-5">
+          <p class="text-white-50 text-size custom-m">As a developer, you have everything available to you and all tha's holding you back is yourself.</p>
           <p class="text-white-50">A quote I live by perfectly illustrates what I mean.</p>
           <p class="text-white-50"><q class="text-white-50">How big would you dream, if you <b>knew</b> you wouldn't fail?</q><br>You've already gone through the hardest parts being a developer, it's time to elevate your skills and become a leader in something you're passionate about.</p>
           <p class="text-white-50">I'm happy to chat over coffee some time about how I can help your company.</p>
@@ -124,5 +154,6 @@
       </div>
     </div>
   </section>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
